
2025-01-06: Fixed new bug where startUp() would cause a crash if run mid-game instead of on runelite startup, due to
	startUp() -> loadHeatmaps() being run before event listeners that set necessary metadata such as onPlayerChanged()

2025-01-07: Made HeatmapNew.readHeatmapsFromFile() parse the fields dictionary-style instead of via direct indexing

----You are Here----

TODO: isSeasonal isn't yet included in the heatmap serialization, so currently only heatmaps that went through
	the contamination detection process are marked as seasonal in memory, and then writing them to disk and
	reading them again results in them having an isSeasonal = false status, which causes them to be written
	to the wrong images folder, probably among other tings.
	Whilst fixing this, see if there's a more robust, dictionary-like way to read the metadata of heatmap files
	instead of indexing them by their expected order in the CSV

TODO: Remove the fields maxVal, minVal, numTilesVisited etc from the heatmap serialization/deserialization process. They shant have been there in the foist place.

TODO: When you hop from a normal world to a seasonal world, the jump in location is counted as a teleport, meaning we need to reinitialize all the relevant variables such as lastX, lastY, and probably the skillXp hashmap

TODO: check out how LootManager sent their in-game update message to the chatbox in all red	text

** UPDATE TO BE RELEASED **

TODO: LOOT_VALUE is kinda useless because it's dependent on both the amount of loot dropped by each NPCs, and the frequency at which people kill them.
	Not sure if it's possible, but an AVERAGE_LOOT_VALUE would be much more informative. However, I suppose that would be information that is already available on the wiki.

TODO: Update world map image
